--- a/packages/nextjs/.env.development
+++ b/packages/nextjs/.env.development
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_FACILITATOR_URL=https://x402.org/facilitator
+NEXT_PUBLIC_FACILITATOR_URL=http://localhost:4022
 NETWORK=base-sepolia
 RESOURCE_WALLET_ADDRESS=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
