--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write . '!(node_modules|.next|contracts)/**/*'",
     "ipfs": "NEXT_PUBLIC_IPFS_BUILD=true yarn build && yarn bgipfs upload config init -u https://upload.bgipfs.com && CID=$(yarn bgipfs upload out | grep -o 'CID: [^ ]*' | cut -d' ' -f2) && [ ! -z \"$CID\" ] && echo '🚀 Upload complete! Your site is now available at: https://community.bgipfs.com/ipfs/'$CID || echo '❌ Upload failed'",
     "lint": "next lint",
+    "lint-staged": "eslint",
     "serve": "next start",
     "start": "next dev",
     "vercel": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env VERCEL_TELEMETRY_DISABLED=1",
@@ -23,11 +24,15 @@
     "@scaffold-ui/debug-contracts": "^0.1.2",
     "@scaffold-ui/hooks": "^0.1.2",
     "@tanstack/react-query": "~5.59.15",
+    "@x402/core": "^2.0.0",
+    "@x402/evm": "^2.0.0",
+    "@x402/next": "^2.0.0",
+    "@x402/paywall": "^2.0.0",
     "blo": "~1.2.0",
     "burner-connector": "0.0.18",
     "daisyui": "5.0.9",
     "kubo-rpc-client": "~5.0.2",
-    "next": "~15.2.3",
+    "next": "16.0.10",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
     "qrcode.react": "~4.0.1",
@@ -37,7 +42,6 @@
     "usehooks-ts": "~3.1.0",
     "viem": "2.34.0",
     "wagmi": "2.16.4",
-    "x402-next": "^0.6.5",
     "zustand": "~5.0.0"
   },
   "devDependencies": {
