--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -26,8 +26,11 @@
     "@tanstack/react-query": "~5.59.15",
     "@x402/core": "^2.0.0",
     "@x402/evm": "^2.0.0",
+    "@x402/fetch": "^2.0.0",
     "@x402/next": "^2.0.0",
     "@x402/paywall": "^2.0.0",
+    "@x402/svm": "^2.0.0",
+    "amazon-ivs-player": "^1.47.0",
     "blo": "~1.2.0",
     "burner-connector": "0.0.18",
     "daisyui": "5.0.9",
